# gen-trace

./: .gitignore  ISSUES  Makefile  Makefile.am  Makefile.arm  Makefile.i686  Makefile.i686.android  README.md  StopWorld.h  StopWorld_linux.cpp  act_on_elf.sh  base_controller.cpp  base_controller.h  base_controller_test.cpp  base_controller_test_lib.cpp  base_target_client.cpp  base_target_client.h  code.vim  code_manager_impl.cpp  code_manager_impl.h  code_manager_impl_test.cpp  code_modify.cpp  code_modify.h  code_modify_test.cpp  config_reader.cpp  config_reader.h  config_reader_test.cpp  ctrace.h  dis_client.cpp  dis_client.h  disassembler.cpp  disassembler.h  entry.cpp  filter_objdump.py  filter_readelf.py  gdb-trace.py  gt_config.c  gt_config.h  gt_main.c  gt_misc.c  (+36 more)
arm/: arm_target_client.cpp  arm_target_client.h  arm_target_client_test.cpp  dis.cpp  dis_gnu.c  dis_gnu.h  dis_test.cpp  flush_code.cpp  flush_code.h  hook_template.S  hook_template_arm.S  hook_template_test.cpp  hook_template_thumb.S
i686/: dis.cpp  dis.h  dis_gnu.c  dis_gnu.h  dis_test.cpp  hook_template.S  hook_template_test.cpp  i686_target_client.cpp  i686_target_client.h  i686_target_client_test.cpp
x64/: dis.cpp  dis.h  dis_client.h  dis_gnu.c  dis_test.cpp  hook_template.S  hook_template_test.cpp  x64_target_client.cpp  x64_target_client.h  x64_target_client_test.cpp
